# SC-DailyThreats

./: .env.example  .gitignore  LICENSE  PRD.md  REQUIREMENTS.md  generate_diagram.py  pyproject.toml
config/: false_positives.yaml  feeds.yaml  settings.yaml
config/sigma_templates/: behavior_artifact.yaml.j2  campaign_hash_ioc.yaml.j2  campaign_network_ioc.yaml.j2  composite_ioc.yaml.j2
tests/: conftest.py  test_collectors.py  test_generators.py  test_processors.py  test_storage.py
tests/fixtures/: sample_feed.xml  sample_llm_response.json
threats/: __init__.py  cli.py  pipeline.py  scheduler.py
threats/collectors/: __init__.py  base.py  otx.py  rss.py  scraper.py  source_discovery.py
threats/generators/: __init__.py  briefing.py  emailer.py  ioc_export.py  renderer.py  sigma.py
threats/models/: __init__.py  briefing.py  intel_item.py  ioc.py  threat_actor.py  ttp.py
threats/processors/: __init__.py  clusterer.py  deduplicator.py  ioc_extractor.py  ioc_researcher.py  ioc_validator.py  llm_analyzer.py  sigma_reviewer.py  ttp_mapper.py
threats/storage/: __init__.py  database.py  repository.py  schema.sql
threats/utils/: http.py  logging.py  rate_limiter.py
